# libvelodyne

./: CMakeLists.txt  README.md  changelog
conf/: CMakeLists.txt  calib-HDL-64E.xml
doc/: CMakeLists.txt
libvelodyne_catkin/: CMakeLists.txt  package.xml
libvelodyne_catkin/include/ethz/velodyne/: Velodyne32Calibration.h  Velodyne32CalibrationForward.h
libvelodyne_catkin/src/: Velodyne32Calibration.cpp
src/: CMakeLists.txt  Config.h.remake  config.h.remake
src/lib/: CMakeLists.txt  Doc.h
src/lib/acquisition/: AcquisitionThread.cpp  AcquisitionThread.h  CMakeLists.txt
src/lib/base/: BinaryBufferWriter.h  Factory.tpp  Mutex.cpp  Serializable.cpp  Serializable.h  Thread.cpp  Timer.cpp  Timestamp.cpp
src/lib/buffer/: CMakeLists.txt  PacketsBuffer.cpp  PacketsBuffer.h
src/lib/com/: CMakeLists.txt  Connection.cpp  Connection.h  SerialConnection.cpp  SerialConnection.h  TCPConnectionClient.cpp  TCPConnectionClient.h  TCPConnectionServer.cpp  TCPConnectionServer.h  UDPConnection.cpp  UDPConnection.h  UDPConnectionClient.cpp  UDPConnectionClient.h  UDPConnectionServer.cpp  UDPConnectionServer.h
src/lib/data-structures/: CMakeLists.txt  SafeQueue.h  SafeQueue.tpp  VdynePointCloud.cpp  VdynePointCloud.h  VdyneScanCloud.cpp  VdyneScanCloud.h
src/lib/exceptions/: BadArgumentException.h  BadArgumentException.tpp  IOException.cpp  IOException.h  InvalidOperationException.cpp  InvalidOperationException.h  OutOfBoundException.cpp  OutOfBoundException.h  OutOfBoundException.tpp  SystemException.cpp  SystemException.h  ThreadException.cpp  ThreadException.h  ThreadsManagerException.h  ThreadsManagerException.tpp  TypeCastException.cpp  TypeCastException.h  TypeCreationException.h  TypeCreationException.tpp
src/lib/sensor/: AcquisitionThread.h  AcquisitionThread.tpp  CMakeLists.txt  Calibration.cpp  Calibration.h  Controller.cpp  Controller.h  Converter.cpp  Converter.h  (+14 more)
(+29 files in other folders)
