<?xml version="1.0"?>
<package>
  <name>libvelodyne_catkin</name>
  <version>0.0.1</version>
  <description>libvelodyne_catkin</description>
  <maintainer email="hannes.sommer@mavt.ethz.ch">Hannes Sommer</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>eigen_catkin</build_depend>
</package>
